[project]
name = "panelsplit"
version = "1.0.3"
description = "A tool for panel data analysis."
authors = [
    {name = "panelsplit developers", email = "eric.frey@bse.eu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib>=1.0.1",
    "matplotlib>=3.4.3",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/4Freye/panelsplit"
Repository = "https://github.com/4Freye/panelsplit"
Documentation = "https://4freye.github.io/panelsplit/panelsplit.html"

# Development dependencies
[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pdoc>=14.7.0",
    "ruff>=0.14.0",
    "pre-commit>=3.5.0",
]


[build-system]
requires = [
    "hatchling>=1.24",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

# Package data configuration for hatchling
[tool.hatch.build.targets.wheel]
packages = ["panelsplit"]
