[project]
name = "panelsplit"
dynamic = ["version"]
description = "A tool for panel data analysis."
authors = [
    {name = "panelsplit developers", email = "eric.frey@bse.eu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib>=1.0.1",
    "matplotlib>=3.4.3",
    "narwhals>=1.42.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.10.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]

[project.urls]
Homepage = "https://github.com/4Freye/panelsplit"
Repository = "https://github.com/4Freye/panelsplit"
Documentation = "https://4freye.github.io/panelsplit/panelsplit.html"

# Development dependencies
[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pdoc>=14.7.0",
    "ruff>=0.14.0",
    "pre-commit>=3.5.0",
    "pip>=25.0.1",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "lxml>=6.0.2",
    "hatchling>=1.27.0",
    "wbdata>=1.0.0",
    "mypy>=1.14.1",
    "tqdm-stubs>=0.2.1",
    "pandas-stubs>=2.0.2.230605",
    "typing-extensions>=4.13.2",
    "numpydoc>=1.7.0",
]


[build-system]
requires = [
    "hatchling>=1.24",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

# Hatch versioning from Git tags
[tool.hatch.version]
source = "vcs"               # derive version from Git tags
write-to = "panelsplit/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

# Package data configuration for hatchling
[tool.hatch.build.targets.wheel]
packages = ["panelsplit"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.numpydoc_validation]
# keep your checks selection (example: use "all" or pick specific checks)
checks = [
"all",
"SA01",
"GL08",
"ES01"
]

# Exclude objects whose final (dotted) name starts with a single leading underscore
# (this will skip names like `mypkg.mymodule._private_func` but NOT `__init__`)
exclude = [
  '^.*\._[^_]',        # skip any object whose last name starts with a single underscore
]

# You can still exclude whole files (e.g. tests) using exclude_files
exclude_files = [
'^tests/.*$',
'panelsplit/utils/validation.py'
]
